<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context="jp.ac.it_college.std.s14002.android.irresponsible.HomeScreen">

    <LinearLayout
        android:id="@+id/layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1D2C35"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

        <Button
            android:id="@+id/button_dungeon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_customize"
            android:text="@string/dungeon_button"
            android:textSize="22sp" />

        <!--<Button
            android:id="@+id/button_collection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/blue_button_customize"
            android:text="@string/collection_button"
            android:textSize="22sp" />-->

        <Button
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/blue_button_customize"
            android:text="@string/menu_button"
            android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/level_view"
            android:textColor="#fff"
            android:textSize="22sp"
            android:gravity="bottom"
            />

        <TextView
            android:id="@+id/label_level"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#fff"
            android:text="@string/level"
            android:textSize="30sp"
            android:gravity="bottom"
            />
            </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="bottom"
            >
            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/progress_bar"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <Button
        android:id="@+id/button_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#405968"
        android:gravity="center"
        android:text="@string/senior_button"
        android:textColor="#fff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#405968"
        android:gravity="center"
        android:text="@string/intermediate_button"
        android:textColor="#fff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#405968"
        android:gravity="center"
        android:text="@string/beginner_button"
        android:textColor="#fff"
        android:textSize="40sp" />

        </LinearLayout>


</LinearLayout>
